Configure puma for web app

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,20 @@
-production:
+default: &default
   adapter: postgresql
   encoding: unicode
   pool: 5
+  username: postgres
+  password: postgres
+  encoding: utf8
+  host: 127.0.0.1
+
+development:
+  <<: *default
+  host: <%= ENV['DATABASE_HOST'] || '127.0.0.1' %>
+  database: <%= ENV['DATABASE_NAME'] || 'coinrate_development' %>
+
+
+production:
+  <<: *default
   host: <%= ENV['DATABASE_HOST'] || '127.0.0.1' %>
   database: <%= ENV['DATABASE_NAME'] || 'coinrate_production' %>
   username: <%= ENV['DATABASE_USER'] || 'postgres' %>
